--- a/test/README
+++ b/test/README
@@ -19,15 +19,9 @@ WARNING! There is no automated evaluation of the outcome of tests t1, t2, t3,
 # Description of the tests
 #
 
-PtCOLX2: publshed test case for evolutionary experiments.
+PtCOLX2: published test case for evolutionary experiments.
 
 t1: Test for DenoptimCG (requires Tinker-RC).
-
-t2: Application specific - test fitness provider script (requires Tinker-RC).
-
-t3: Evolutionary experiment with ring-closures in 3D (requires Tinker-RC).
-
-t4: Exploration of fragment space with ring-closures in 3D (requires Tinker-RC).
 
 t5: Exploration of fragment space from given root graphs and ring-closures (no 3D).
 
