cleaning up and updating test instructions and scripts

--- a/README
+++ b/README
@@ -1,116 +1,90 @@
 -------------------------------------------------------------------------------
                                General Information
 -------------------------------------------------------------------------------
-The directory contains Java source files related to DENOPTIM and related 
-programs.
+De Novo OPTimization of organic and Inorganic Molecules (DENOPTIM) is a
+software for de novo design and optimization of functional compounds. 
 
-src: The src directory contains the source code:      
+------------------------------------------------------------------------------
+                   Content of the source code folder tree
+------------------------------------------------------------------------------
 
-    DENOPTIM: Generic library of functions and data structures that can be 
-              used by other programs.
+build: contains scripts for building the DENOPTIM package from source.
 
-    DenoptimGA: The Genetic Algorithm engine that uses the DENOPTIM library  
+contrib: contains additional source and data that may be used in relation 
+         to DENOPTIM
+
+doc: contains documentation and user manual 
+
+lib: The lib directory contains all third-party libraries used by DENOPTIM.
+
+src: contains the source code of DENOPTIM's core and modules:      
+
+    DENOPTIM: Generic library of functions and data structures.
+
+    DenoptimCG: Generator of 3D conformations.
+
+    DenoptimGA: Genetic algorithm engine that uses the DENOPTIM library  
                 for molecular design.
 
-    DenoptimRND: The Evolutionary Algorithms using only random selection of
-                new members.
+    DenoptimRND: Dummy evolutionary algorithm using only random selection of
+                 new members.
 
-    DenoptimCG: The 3D conformation generator. Requires standard or
-                RCP-capable (for DENOPTIM runs performing ring-closures) to
-                be installed.
+    FragSpaceExplorer: Combinatorial algorithm for exploration of fragment 
+                       spaces.
 
-    The "misc" directory contains other miscellaneous utilities that may be 
-    used as part of a workflow based on DENOPTIM. In the general scheme of 
-    things, programs that contain multiple source files have been stored in 
-    a single directory while those using single source files are placed in 
-    the "misc" directory.
-    The "misc" directory contains the following tools: 
+    misc: miscellaneous utilities that may be useful in DENOPTIM-based work.
 
-        PrepareMOPAC: A utility that uses a script based interface to prepare
-                the input for MOPAC.
-
-	CheckCatalystConstraints: A Java-based utility that reads the output 
-		from a MOPAC based geometry optimization, calculates the 
-		descriptors based on which the catalytic efficiency is 
-		predicted. Additional checks for any constraint violations 
-		are also performed and the results are written to the 
-		specified output file. Reads options from a text file. 
-
-	EVA: Calculation of spectroscopic QSAR descriptors from the 
-		vibrational frequencies and molecular orbital energies. 
-
-	CheckAnchor: A utility that checks if the dye molecule designed by 
-		DENOPTIM contains an anchoring group (list of acceptable 
-		groups is for now hard-coded).
-
-	GetMOPACCoordinates: A utility to read the MOPAC output and extract 
-		the 3D coordinates. 
-
-	PrepareFitnessOutput: A utility for preparing a formatted SDF file. 
-		Parameters are supplied in a text file. 
-
-	RDKITFragmenter: A python program that uses the RDKit library to 
-		create fragments. A java program SetupBRICS that provides a 
-		DENOPTIM readable fragment file by parsing the output from 
-		the RDKITFragmenter. 
-
-lib: The lib directory contains all third-party libraries that are used by
-     DENOPTIM and/or other programs. NOTE: All such libraries must be placed
-     in  this library.
-
-data: the data folder contains sample input and fitness evaluation scripts, 
-fragment files, compatibility matrix, R-scripts for QSPR models. JavaScript 
-and CSS files that are used by the HTML5 viewer for 3D molecular 
-representation. DO NOT STORE BINARY FILES. 
-
-doc: the documentation folder contains the DENOPTIM manual, a template for 
-making fitness-scripts and some extra documentation.
+test: contains some automated functionality tests and the published test case.
 
 
 
 -------------------------------------------------------------------------------
-                        Compiling the source
+                                  Quick start
 -------------------------------------------------------------------------------
+To get started you first have to compile DENOPTIM and its programs.
+
+1) Preparation
+Make sure you have Java installed (1.7 or above) by running the following 
+commands
+	java -version
+	javac -version
+If this does not results in a version statement or version is too old, please 
+get and install Java, for instance, from www.oracle.com.
+
+
+2) Compile DENOPTIM
 Separate shell scripts have been created to compile the programs. In addition 
-a "build-all" script has been provided that compiles all the programs.
-All compiled programs can be finally stored in the "dist" directory which is 
+a "build-all" script can be used to compile all the programs. Optionally, 
+all compiled programs can be finally stored in the "dist" directory which is 
 created by the script.
 
 To compile all programs simply type 
     cd build
     bash build-all.sh 
-         or
-    bash build-all.sh makedist (this creates a distribution directory)
-    
-To compile specific programs simply type     
-    cd build
-    # subtitute the <programname> as required
-    bash build-<programname>.sh 
-    
-NOTE: If any changes are made to the dependent libraries (for eg CDK and 
-      DENOPTIM) please recompile all associated programs, for the changes to
-      be effective. 
-    
+ 
+3) Denoptim is now ready!
+
+After compilation you can run the functionality tests (takes 2-3 minutes).  
+	cd test/functional_tests
+    bash runAllTests.sh
+Or, you can play with the optimization of organometallic ligands sets that 
+weaken the carbonyl bond in Pt(CO)(L)(X)2 complexes (takes 5-10 minutes).
+	cd test/PtCOLX2
+	bash runEvolutionaryExperiment.sh
+
+
+
+-------------------------------------------------------------------------------
+                                  User Manual
+-------------------------------------------------------------------------------
+For information see the user manual at __
 
 
 -------------------------------------------------------------------------------
-                        Creating QSPR models using R
+                                 Cite DENOPTIM
 -------------------------------------------------------------------------------
-R-scripts have been provided for the calculation of QSPR models. 
+DENOPTIM: Software for Computational de Novo Design of Organic and Inorganic Molecules 
+Vishwesh Venkatraman,†,‡ Marco Foscato,#,‡ and Vidar R. Jensen, J, Chem. Inf. Mod 2019 (submitted)
 
-To create the models (binary format)
-   cd directory_containing_the_script
-   /usr/bin/Rscript script-name
-   
 
--------------------------------------------------------------------------------
-                              CONTRIB
--------------------------------------------------------------------------------
-The contrib directory contains contributed code to be used typically as a 
-post-processing step of DENOPTIM. 
-
-To compile the programs simply type 
-    cd contrib/build
-    bash build-gendenoptimftree.sh
-    
     
