--- a/test/functional_tests/t7/README
+++ b/test/functional_tests/t7/README
@@ -1,10 +1,10 @@
 #
-# README file for test 't11' of DENOPTIM package
+# README file for test 't7' of DENOPTIM package
 #
 
 The binary file used in this test has been created with the SVN revision 8952.
-Substrantial changed to the DENOPTIM's objects may require
-updating the input and data files used by this test. The files under folder 'p9'
+Substantial changed to the DENOPTIM's objects may require
+updating the input and data files used by this test. The files under folder 'p6'
 in combination with the use of developers-only code (see 'PREPARECHKFORTEST'
 in class CombinatorialExplorerByLayer.java of the FragSpaceExplorer package) can
 be used to generate a new set of binaries for this test.
