renaming folder to be consistent with publications

--- a/test/README
+++ b/test/README
@@ -4,6 +4,7 @@
 
 => PtCOLX2: published test case for evolutionary experiments.
 
+=> PtCOLX2_FSE: test case for exhaustive exploration of fragment space
 
 => functional_tests: dummy runs of various components of the DENOPTIM package
                      meant to verify the functionality of the code.
